# ttf-reader

./: LICENSE  flake.nix  ttf-reader.cabal
src/Codec/TTF/: Reader.hs
src/Codec/TTF/Reader/: CMap.hs  Common.hs  FontFormat.hs  GPOS.hs  Head.hs  Kern.hs  MaxP.hs  TableDirectory.hs
src/Codec/TTF/Reader/Schema/: CMap.hs  GPOS.hs  Head.hs  Kern.hs  MaxP.hs  TableDirectory.hs
utils/: Schema.hs  TagLits.hs
